@@ -1,11 +1,7 @@
-
-
-
 package io.jenkins.plugins.wiz;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -24,15 +20,13 @@ import org.apache.commons.lang.StringUtils;
  */
 public class WizScannerResult {
     private static final Logger LOGGER = Logger.getLogger(WizScannerResult.class.getName());
-    private static final DateTimeFormatter OUTPUT_FORMATTER =
-            DateTimeFormatter.ofPattern("MMMM d, yyyy 'at' h:mm a", Locale.ENGLISH);
-    private static final DateTimeFormatter INPUT_FORMATTER =
-            DateTimeFormatter.ISO_DATE_TIME;
+    private static final DateTimeFormatter OUTPUT_FORMATTER = DateTimeFormatter.ofPattern("MMMM d, yyyy 'at' h:mm a", Locale.ENGLISH);
+    private static final DateTimeFormatter INPUT_FORMATTER = DateTimeFormatter.ISO_DATE_TIME;
 
     private String scannedResource;
     private String scanTime;
     private ScanStatus status;
-    private int secretTotalCount;
+    private Secrets secrets;
     private Vulnerabilities vulnerabilities;
     private ScanStatistics scanStatistics;
     private String reportUrl;
@@ -77,7 +71,6 @@ public class WizScannerResult {
         private int mediumCount;
         private int highCount;
         private int criticalCount;
-        private int unfixedCount;
         private int totalCount;
 
         // Enhanced getters with validation
@@ -99,10 +92,6 @@ public class WizScannerResult {
 
         public int getCriticalCount() {
             return Math.max(0, criticalCount);
-        }
-
-        public int getUnfixedCount() {
-            return Math.max(0, unfixedCount);
         }
 
         public int getTotalCount() {
@@ -130,10 +119,6 @@ public class WizScannerResult {
             this.criticalCount = Math.max(0, count);
         }
 
-        public void setUnfixedCount(int count) {
-            this.unfixedCount = Math.max(0, count);
-        }
-
         public void setTotalCount(int count) {
             this.totalCount = Math.max(0, count);
         }
@@ -150,12 +135,6 @@ public class WizScannerResult {
         private int mediumMatches;
         private int highMatches;
         private int criticalMatches;
-        private int totalMatches;
-        private int filesFound;
-        private int filesParsed;
-        private int queriesLoaded;
-        private int queriesExecuted;
-        private int queriesExecutionFailed;
 
         // Enhanced getters with validation
         public int getInfoMatches() {
@@ -178,30 +157,6 @@ public class WizScannerResult {
             return Math.max(0, criticalMatches);
         }
 
-        public int getTotalMatches() {
-            return Math.max(0, totalMatches);
-        }
-
-        public int getFilesFound() {
-            return Math.max(0, filesFound);
-        }
-
-        public int getFilesParsed() {
-            return Math.max(0, filesParsed);
-        }
-
-        public int getQueriesLoaded() {
-            return Math.max(0, queriesLoaded);
-        }
-
-        public int getQueriesExecuted() {
-            return Math.max(0, queriesExecuted);
-        }
-
-        public int getQueriesExecutionFailed() {
-            return Math.max(0, queriesExecutionFailed);
-        }
-
         // Setters with validation
         public void setInfoMatches(int matches) {
             this.infoMatches = Math.max(0, matches);
@@ -222,36 +177,69 @@ public class WizScannerResult {
         public void setCriticalMatches(int matches) {
             this.criticalMatches = Math.max(0, matches);
         }
+    }
 
-        public void setTotalMatches(int matches) {
-            this.totalMatches = Math.max(0, matches);
+    public static class Secrets {
+        private int totalCount;
+        private int infoCount;
+        private int lowCount;
+        private int mediumCount;
+        private int highCount;
+        private int criticalCount;
+
+        // Enhanced getters with validation
+        public int getInfoCount() {
+            return Math.max(0, infoCount);
         }
 
-        public void setFilesFound(int count) {
-            this.filesFound = Math.max(0, count);
+        public int getLowCount() {
+            return Math.max(0, lowCount);
         }
 
-        public void setFilesParsed(int count) {
-            this.filesParsed = Math.max(0, count);
+        public int getMediumCount() {
+            return Math.max(0, mediumCount);
         }
 
-        public void setQueriesLoaded(int count) {
-            this.queriesLoaded = Math.max(0, count);
+        public int getHighCount() {
+            return Math.max(0, highCount);
         }
 
-        public void setQueriesExecuted(int count) {
-            this.queriesExecuted = Math.max(0, count);
+        public int getCriticalCount() {
+            return Math.max(0, criticalCount);
         }
 
-        public void setQueriesExecutionFailed(int count) {
-            this.queriesExecutionFailed = Math.max(0, count);
+        public int getTotalCount() {
+            return Math.max(0, totalCount);
+        }
+
+        // Setters with validation
+        public void setInfoCount(int count) {
+            this.infoCount = Math.max(0, count);
+        }
+
+        public void setLowCount(int count) {
+            this.lowCount = Math.max(0, count);
+        }
+
+        public void setMediumCount(int count) {
+            this.mediumCount = Math.max(0, count);
+        }
+
+        public void setHighCount(int count) {
+            this.highCount = Math.max(0, count);
+        }
+
+        public void setCriticalCount(int count) {
+            this.criticalCount = Math.max(0, count);
+        }
+
+        public void setTotalCount(int count) {
+            this.totalCount = Math.max(0, count);
         }
 
         // Add validation method
         public boolean isValid() {
-            return totalMatches >= 0 &&
-                    filesParsed <= filesFound &&
-                    queriesExecuted <= queriesLoaded;
+            return totalCount >= (infoCount + lowCount + mediumCount + highCount + criticalCount);
         }
     }
 
@@ -280,14 +268,6 @@ public class WizScannerResult {
         this.status = status;
     }
 
-    public int getSecretTotalCount() {
-        return Math.max(0, secretTotalCount);
-    }
-
-    public void setSecretTotalCount(int count) {
-        this.secretTotalCount = Math.max(0, count);
-    }
-
     public Optional<Vulnerabilities> getVulnerabilities() {
         return Optional.ofNullable(vulnerabilities);
     }
@@ -302,6 +282,14 @@ public class WizScannerResult {
 
     public void setScanStatistics(ScanStatistics stats) {
         this.scanStatistics = stats;
+    }
+
+    public Optional<Secrets> getSecrets() {
+        return Optional.ofNullable(secrets);
+    }
+
+    public void setSecrets(Secrets secrets) {
+        this.secrets = secrets;
     }
 
     public String getReportUrl() {
@@ -323,7 +311,7 @@ public class WizScannerResult {
                 throw new IOException("JSON file does not exist");
             }
 
-            String content = new String(Files.readAllBytes(jsonFile.toPath()), StandardCharsets.UTF_8);
+            String content = Files.readString(jsonFile.toPath());
             if (StringUtils.isBlank(content)) {
                 throw new IOException("JSON file is empty");
             }
@@ -337,14 +325,19 @@ public class WizScannerResult {
         }
     }
 
-    private static WizScannerResult parseJsonContent(JSONObject root) {
+    /**
+     * Parses a WizScannerResult from a JSON object
+     * @param root The JSON object to parse
+     * @return The parsed WizScannerResult or null if parsing fails
+     */
+    public static WizScannerResult parseJsonContent(JSONObject root) {
         WizScannerResult details = new WizScannerResult();
 
         try {
             details.setScannedResource(getJsonString(root, "scanOriginResource.name"));
             details.setScanTime(formatDateTime(getJsonString(root, "createdAt")));
             details.setStatus(parseStatus(getJsonString(root, "status.verdict")));
-            details.setSecretTotalCount(getJsonInt(root, "result.analytics.secrets.totalCount"));
+            details.setSecrets(parseSecrets(root));
             details.setVulnerabilities(parseVulnerabilities(root));
             details.setScanStatistics(parseScanStatistics(root));
             details.setReportUrl(getJsonString(root, "reportUrl"));
@@ -358,11 +351,13 @@ public class WizScannerResult {
     }
 
     private static void validateResult(WizScannerResult details) {
-        if (details.getVulnerabilities().isPresent() && !details.getVulnerabilities().get().isValid()) {
-            LOGGER.warning("Vulnerabilities data contains inconsistencies");
+        if (details.getVulnerabilities().isPresent()
+                && !details.getVulnerabilities().get().isValid()) {
+            LOGGER.log(Level.WARNING,"Vulnerabilities data contains inconsistencies");
         }
-        if (details.getScanStatistics().isPresent() && !details.getScanStatistics().get().isValid()) {
-            LOGGER.warning("Scan statistics contain inconsistencies");
+        if (details.getSecrets().isPresent()
+                && !details.getSecrets().get().isValid()) {
+            LOGGER.log(Level.WARNING,"Secrets data contain inconsistencies");
         }
     }
 
@@ -411,31 +406,6 @@ public class WizScannerResult {
         return ScanStatus.fromString(statusString);
     }
 
-    private static int getJsonInt(JSONObject root, String path) {
-        if (root == null || StringUtils.isBlank(path)) {
-            return 0;
-        }
-        try {
-            JSONObject current = root;
-            String[] keys = path.split("\\.");
-
-            for (int i = 0; i < keys.length - 1; i++) {
-                if (!current.has(keys[i])) {
-                    return 0;
-                }
-                current = current.getJSONObject(keys[i]);
-                if (current == null) {
-                    return 0;
-                }
-            }
-
-            return current.optInt(keys[keys.length - 1], 0);
-        } catch (Exception e) {
-            LOGGER.log(Level.WARNING, "Error getting JSON integer for path: " + path, e);
-            return 0;
-        }
-    }
-
     private static Vulnerabilities parseVulnerabilities(JSONObject root) {
         Vulnerabilities vulnerabilities = new Vulnerabilities();
         try {
@@ -450,7 +420,6 @@ public class WizScannerResult {
                         vulnerabilities.setMediumCount(vulns.optInt("mediumCount", 0));
                         vulnerabilities.setHighCount(vulns.optInt("highCount", 0));
                         vulnerabilities.setCriticalCount(vulns.optInt("criticalCount", 0));
-                        vulnerabilities.setUnfixedCount(vulns.optInt("unfixedCount", 0));
                         vulnerabilities.setTotalCount(vulns.optInt("totalCount", 0));
                     }
                 }
@@ -473,12 +442,6 @@ public class WizScannerResult {
                     stats.setMediumMatches(scanStats.optInt("mediumMatches", 0));
                     stats.setHighMatches(scanStats.optInt("highMatches", 0));
                     stats.setCriticalMatches(scanStats.optInt("criticalMatches", 0));
-                    stats.setTotalMatches(scanStats.optInt("totalMatches", 0));
-                    stats.setFilesFound(scanStats.optInt("filesFound", 0));
-                    stats.setFilesParsed(scanStats.optInt("filesParsed", 0));
-                    stats.setQueriesLoaded(scanStats.optInt("queriesLoaded", 0));
-                    stats.setQueriesExecuted(scanStats.optInt("queriesExecuted", 0));
-                    stats.setQueriesExecutionFailed(scanStats.optInt("queriesExecutionFailed", 0));
                 }
             }
         } catch (Exception e) {
@@ -487,45 +450,180 @@ public class WizScannerResult {
         return stats;
     }
 
+    private static Secrets parseSecrets(JSONObject root) {
+        Secrets secrets = new Secrets();
+        try {
+            if (root != null && root.has("result")) {
+                JSONObject result = root.getJSONObject("result");
+                if (result.has("analytics")) {
+                    JSONObject analytics = result.getJSONObject("analytics");
+                    if (analytics.has("secrets")) {
+                        JSONObject secretsJson = analytics.getJSONObject("secrets");
+                        secrets.setInfoCount(secretsJson.optInt("infoCount", 0));
+                        secrets.setLowCount(secretsJson.optInt("lowCount", 0));
+                        secrets.setMediumCount(secretsJson.optInt("mediumCount", 0));
+                        secrets.setHighCount(secretsJson.optInt("highCount", 0));
+                        secrets.setCriticalCount(secretsJson.optInt("criticalCount", 0));
+                        secrets.setTotalCount(secretsJson.optInt("totalCount", 0));
+                    }
+                }
+            }
+        } catch (Exception e) {
+            LOGGER.log(Level.WARNING, "Error parsing secrets", e);
+        }
+        return secrets;
+    }
+
     @Override
     public String toString() {
-        return String.format("WizScannerResult{resource='%s', status=%s, vulnerabilities=%d, secrets=%d}",
+        return String.format(
+                "WizScannerResult{resource='%s', status=%s, vulnerabilities=%d, secrets=%d}",
                 getScannedResource(),
                 getStatus(),
                 getVulnerabilities().map(Vulnerabilities::getTotalCount).orElse(0),
-                getSecretTotalCount());
+                getSecrets().map(Secrets::getTotalCount).orElse(0));
     }
 
+    /*
+     * The following getter methods are used by the index.jelly template to display
+     * vulnerability and scan statistics in the Jenkins UI. Although they may appear unused
+     * in static code analysis, they are dynamically invoked by the Jelly template.
+     * All methods return 0 if the underlying data is not available.
+     */
+
+    /**
+     * Gets the count of critical vulnerabilities.
+     * @return The number of critical vulnerabilities found
+     */
+    @SuppressWarnings("unused")
     public int getVulnerabilitiesCriticalCount() {
         return getVulnerabilities().map(Vulnerabilities::getCriticalCount).orElse(0);
     }
 
+    /**
+     * Gets the count of high severity vulnerabilities.
+     * @return The number of high severity vulnerabilities found
+     */
+    @SuppressWarnings("unused")
     public int getVulnerabilitiesHighCount() {
         return getVulnerabilities().map(Vulnerabilities::getHighCount).orElse(0);
     }
 
+    /**
+     * Gets the count of medium severity vulnerabilities.
+     * @return The number of medium severity vulnerabilities found
+     */
+    @SuppressWarnings("unused")
     public int getVulnerabilitiesMediumCount() {
         return getVulnerabilities().map(Vulnerabilities::getMediumCount).orElse(0);
     }
 
+    /**
+     * Gets the count of low severity vulnerabilities.
+     * @return The number of low severity vulnerabilities found
+     */
+    @SuppressWarnings("unused")
     public int getVulnerabilitiesLowCount() {
         return getVulnerabilities().map(Vulnerabilities::getLowCount).orElse(0);
     }
 
+    /**
+     * Gets the count of info severity vulnerabilities.
+     * @return The number of info severity vulnerabilities found
+     */
+    @SuppressWarnings("unused")
+    public int getVulnerabilitiesInfoCount() {
+        return getVulnerabilities().map(Vulnerabilities::getInfoCount).orElse(0);
+    }
+
+    /**
+     * Gets the count of critical severity matches from scan statistics.
+     * @return The number of critical severity matches found
+     */
+    @SuppressWarnings("unused")
     public int getScanStatisticsCriticalMatches() {
         return getScanStatistics().map(ScanStatistics::getCriticalMatches).orElse(0);
     }
 
+    /**
+     * Gets the count of high severity matches from scan statistics.
+     * @return The number of high severity matches found
+     */
+    @SuppressWarnings("unused")
     public int getScanStatisticsHighMatches() {
         return getScanStatistics().map(ScanStatistics::getHighMatches).orElse(0);
     }
 
+    /**
+     * Gets the count of medium severity matches from scan statistics.
+     * @return The number of medium severity matches found
+     */
+    @SuppressWarnings("unused")
     public int getScanStatisticsMediumMatches() {
         return getScanStatistics().map(ScanStatistics::getMediumMatches).orElse(0);
     }
 
+    /**
+     * Gets the count of low severity matches from scan statistics.
+     * @return The number of low severity matches found
+     */
+    @SuppressWarnings("unused")
     public int getScanStatisticsLowMatches() {
         return getScanStatistics().map(ScanStatistics::getLowMatches).orElse(0);
+    }
+
+    /**
+     * Gets the count of informational severity matches from scan statistics.
+     * @return The number of informational severity matches found
+     */
+    @SuppressWarnings("unused")
+    public int getScanStatisticsInfoMatches() {
+        return getScanStatistics().map(ScanStatistics::getInfoMatches).orElse(0);
+    }
+
+    /**
+     * Gets the count of critical severity secrets.
+     * @return The number of critical severity secrets found
+     */
+    @SuppressWarnings("unused")
+    public int getSecretsCriticalCount() {
+        return getSecrets().map(Secrets::getCriticalCount).orElse(0);
+    }
+
+    /**
+     * Gets the count of high severity secrets.
+     * @return The number of high severity secrets found
+     */
+    @SuppressWarnings("unused")
+    public int getSecretsHighCount() {
+        return getSecrets().map(Secrets::getHighCount).orElse(0);
+    }
+
+    /**
+     * Gets the count of medium severity secrets.
+     * @return The number of medium severity secrets found
+     */
+    @SuppressWarnings("unused")
+    public int getSecretsMediumCount() {
+        return getSecrets().map(Secrets::getMediumCount).orElse(0);
+    }
+
+    /**
+     * Gets the count of low severity secrets.
+     * @return The number of low severity secrets found
+     */
+    @SuppressWarnings("unused")
+    public int getSecretsLowCount() {
+        return getSecrets().map(Secrets::getLowCount).orElse(0);
+    }
+
+    /**
+     * Gets the count of informational severity secrets.
+     * @return The number of informational severity secrets found
+     */
+    @SuppressWarnings("unused")
+    public int getSecretsInfoCount() {
+        return getSecrets().map(Secrets::getInfoCount).orElse(0);
     }
 }
 
